Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.0, 6.7.1
-
None
-
-
3de6d6fd3 (dev), b33e0eac9 (6.8)
Description
The menus are now transparent when using the windowsvista style.
This is very inconvenient, because this also breaks older custom stylesheets in dark mode, as you have to set the windowsvista style in order to get rid of the automatic dark mode palette that the new windows11 style now adds.
You can recreate this by using e.g. the camera example in the qt creator and setting the windowsvista style:
// Copyright (C) 2017 The Qt Company Ltd. // SPDX-License-Identifier: LicenseRef-Qt-Commercial OR BSD-3-Clause #include "camera.h" #include <QApplication> #include <QStyle> #include <QStyleFactory> int main(int argc, char *argv[]) { QApplication app(argc, argv); Camera camera; camera.show(); if (QStyle* style = QStyleFactory::create("windowsvista")) { app.setStyle(style); } return app.exec(); };
Attachments
Issue Links
- is duplicated by
-
QTBUG-127958 Menus drawn with transparent background when switching from windows11 to windowsvista style
-
- Closed
-